--- a/CCS/style.css
+++ b/CCS/style.css
@@ -28,6 +28,12 @@ footer {
   padding: 15px 0; /* Mais espaçamento para o rodapé */
 }
 
+fw-bold {
+  background-color: blue;
+  color: chartreuse;
+}
+
+
 footer a:hover {
   text-decoration: underline; /* Sublinha o link ao passar o mouse */
 }
